--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html"><b>Contact</b></a>
       </li>
+	  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://verifiedcovidleads.com/"><b>Verified Covid Leads</b></a>
+      </li>
         
 
     
