--- a/world.html
+++ b/world.html
@@ -32,7 +32,11 @@
         <li class="nav-item">
             <a class="nav-link" href="contact.html"><b>Contact</b></a>
       </li>
+         <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://verifiedcovidleads.com/"><b>Verified Covid Leads</b></a>
+      </li>
         
+
 
     
 
