--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </li>
         
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://covidrelief.glideapp.io/">Covi Releaf</a>
+          <a class="nav-link js-scroll-trigger" href="https://covidrelief.glideapp.io/">Covi Relief</a>
       </li>
         
          <li class="nav-item">
